crates/snapshot-tests/tests/snapshots/parser__bad_floats__underscore_after_dot.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidFloat]: invalid float: expected digit after decimal point at `a`
  ┌─ underscore_after_dot:1:5
  │
1 │ a = 1._5
  │     ^^^^ invalid float: expected digit after decimal point


error: invalid float: expected digit after decimal point at `a`
 --> underscore_after_dot:1:5
  |
1 | a = 1._5
  |     ^^^^ invalid float: expected digit after decimal point
Error {
    kind: "InvalidFloat",
    message: "invalid float: expected digit after decimal point",
    span: 4..8,
    path: Some(
        "a",
    ),
}
